--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,9 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp",
-        "cassert": "cpp"
+        "cassert": "cpp",
+        "any": "cpp",
+        "expected": "cpp",
+        "variant": "cpp"
     }
 }
